[fix] checkboxes not positioning correctly on grid in chrome [fix] gap in form example

--- a/demo/style.css
+++ b/demo/style.css
@@ -186,6 +186,11 @@ input[type='number'] {
   padding-right: calc(var(--spacing) * 0.5);
 }
 
+input[type='checkbox'],
+input[type='radio'] {
+  max-width: var(--line-height);
+}
+
 :focus {
   box-shadow: inset 0 0 0 2px var(--focus-color);
 }
